--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,6 +14,11 @@
     --whitegrey: #e5eff5;
     --pink: #fa3a57;
     --brown: #a3821a;
+
+    --d-text: #f8f8f2;
+    --d-card: #181818;
+    --d-background: #282a36;
+    --d-current-line: #44475a;
 }
 
 /* Reset
@@ -280,7 +285,7 @@ html {
 }
 body {
     overflow-x: hidden;
-    color: color(var(--midgrey) l(-25%));
+    color: color(var(--d-text));
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.5rem;
     line-height: 1.6em;
