--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -29,7 +29,7 @@ production stylesheet in assets/built/screen.css
 @import "global.css";
 
 body {
-    background: #f4f8fb;
+    background: color(var(--d-background));
 }
 
 .img {
@@ -110,7 +110,7 @@ body {
     padding-top: 12px;
     padding-bottom: 12px;
     color: #fff;
-    background: color(var(--darkgrey) l(-5%)) no-repeat center center;
+    background: color(var(--d-current-line)) no-repeat center center;
     background-size: cover;
 }
 
@@ -387,15 +387,15 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     overflow: hidden;
     margin: 0 20px 40px;
     min-height: 300px;
-    background: #fff center center;
+    background: color(var(--d-card)) center center;
     background-size: cover;
     border-radius: 5px;
-    box-shadow: rgba(39,44,49,0.06) 8px 14px 38px, rgba(39, 44, 49, 0.03) 1px 3px 8px;
+    box-shadow: 8px 14px 38px #08090aa6, 1px 3px 8px rgba(44,52,60,.94);
     transition: all 0.5s ease;
 }
 
 .post-card:hover {
-    box-shadow: 0 0 1px rgba(39,44,49,0.10), 0 3px 16px rgba(39, 44, 49,0.07);
+    box-shadow: 0px 0px 12px rgb(8, 9, 10), 1px 3px 8px rgba(44, 52, 60, 0.94);
     transition: all 0.3s ease;
     transform: translate3D(0, -1px, 0);
 }
@@ -418,7 +418,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     position: relative;
     display: block;
     padding: 25px 25px 0;
-    color: var(--darkgrey);
+    color: color(var(--d-text));
 }
 
 .post-card-content-link:hover {
@@ -540,7 +540,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 .post-template .site-main,
 .page-template .site-main {
     padding-bottom: 4vw;
-    background: #fff;
+    background: color(var(--d-background));
 }
 
 .post-full {
@@ -577,7 +577,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-title {
     margin: 0;
-    color: color(var(--darkgrey) l(-5%));
+    color: #fff;
 }
 
 .date-divider {
@@ -615,7 +615,6 @@ The first (most recent) post in the list is styled to be bigger than the others 
     font-family: Georgia, serif;
     font-size: 2.2rem;
     line-height: 1.6em;
-    background: #fff;
 }
 
 @media (max-width: 1170px) {
@@ -704,7 +703,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-content a {
-    color: #000;
+    color: var(--d-text);
     box-shadow: var(--blue) 0 -1px 0 inset;
 }
 
@@ -715,7 +714,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-content strong,
 .post-full-content em {
-    color: color(var(--darkgrey) l(-5%));
+    color: #fff;
 }
 
 .post-full-content small {
@@ -797,8 +796,9 @@ Usage (In Ghost editor):
     font-size: 0.8em;
     line-height: 1em;
     font-weight: 400!important;
-    background: var(--whitegrey);
+    background: #272822;
     border-radius: 3px;
+    border: color(var(--darkgrey) l(-10%)) 1px solid;
 }
 
 .post-full-content pre {
@@ -807,11 +807,15 @@ Usage (In Ghost editor):
     padding: 20px;
     max-width: 100%;
     border: color(var(--darkgrey) l(-10%)) 1px solid;
-    color: var(--whitegrey);
+    color: #f8f8f2;
     font-size: 1.4rem;
     line-height: 1.5em;
-    background: color(var(--darkgrey) l(-3%));
+    background: #272822;
     border-radius: 5px;
+}
+
+.post-full-content pre > code {
+    border-color: transparent;
 }
 
 .post-full-content pre code {
@@ -823,6 +827,17 @@ Usage (In Ghost editor):
 
 .post-full-content pre code * {
     color: inherit;
+}
+
+/* Less ugly toolbar */
+div.code-toolbar {
+    font-family: monospace;
+    min-width: 100%;
+    max-width: 100%;
+}
+
+div.code-toolbar>.toolbar a:hover, div.code-toolbar>.toolbar button:hover, div.code-toolbar>.toolbar span:hover {
+    background: #505050;
 }
 
 .post-full-content .fluid-width-video-wrapper {
@@ -1039,14 +1054,14 @@ Usage (In Ghost editor):
     padding: 6.5vw 7vw 7vw;
     border: color(var(--whitegrey) l(+2%)) 1px solid;
     text-align: center;
-    background: color(var(--whitegrey) l(+4%));
+    background: color(var(--d-current-line));
     border-radius: 7px;
 }
 
 .subscribe-form-title {
     margin: 0 0 3px 0;
     padding: 0;
-    color: var(--darkgrey);
+    color: #fff;
     font-size: 3.5rem;
     line-height: 1;
     font-weight: 700;
@@ -1054,7 +1069,7 @@ Usage (In Ghost editor):
 
 .subscribe-form p {
     margin-bottom: 1em;
-    color: var(--midgrey);
+    color: var(--d-text);
     font-size: 2.2rem;
     line-height: 1.55em;
     letter-spacing: 0.2px;
@@ -1175,7 +1190,7 @@ Usage (In Ghost editor):
 }
 
 .author-card-name a {
-    color: var(--darkgrey);
+    color: #fff;
     font-weight: 700;
 }
 
