--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -841,6 +841,18 @@ div.code-toolbar>.toolbar a:hover, div.code-toolbar>.toolbar button:hover, div.c
     background: #505050;
 }
 
+/* Readable marks in code */
+code[class*="language-"] mark,
+pre[class*="language-"] mark {
+	display: inline-block;
+	color: inherit;
+	background: none;
+	border: 1px solid #000;
+	box-shadow: 0 0 2px #fff;
+	padding: 1px;
+	background: rgba(0,0,0,0.2);
+}
+
 .post-full-content .fluid-width-video-wrapper {
     margin: 1.5em 0 3em;
 }
