--- a/default.hbs
+++ b/default.hbs
@@ -64,7 +64,7 @@
     </script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
 
-    <script type="text/javascript" src="{{asset "js/fix-mark.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/devdark.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
 
     {{#if pagination.pages}}
